# uav-rgbd--city-simulation

./: .gitignore  PACKAGE_INFO.txt  README.md  README_详细配置教程.md  SHA256SUMS.txt
avoidance_extension_package/: README.md  requirements.example.txt
base_sim_package/: README.md  requirements.example.txt
docs/: open_source_checklist.md  package_policy.md  rename_user_paths.md  (+1 more)
payload/: README.md
payload/vision_sim_ws/src/vision_people_sim/: README.md  package.xml  setup.cfg  setup.py  vision_people_sim_launch_common.py
payload/vision_sim_ws/src/vision_people_sim/config/: mavros_apm_rgbd.yaml
payload/vision_sim_ws/src/vision_people_sim/launch/: basic_people.launch.py  city_people.launch.py  multi_people.launch.py
payload/vision_sim_ws/src/vision_people_sim/models/apm_iris_follow_static/: model.config  model.sdf
payload/vision_sim_ws/src/vision_people_sim/models/d435i_downward_rgbd/: model.config  model.sdf
payload/vision_sim_ws/src/vision_people_sim/models/d435i_downward_sensor_only/: model.config  model.sdf
payload/vision_sim_ws/src/vision_people_sim/models/iris_apm_rgbd/: model.sdf
payload/vision_sim_ws/src/vision_people_sim/models/textured_person/: model.config  model.sdf
payload/vision_sim_ws/src/vision_people_sim/models/textured_vehicle/: model.config  model.sdf
payload/vision_sim_ws/src/vision_people_sim/vision_people_sim/: d435i_topic_adapter.py  guided_flight.py  gz_rgbd_bridge.py  people_motion.py  rgbd_camera_follow.py
payload/vision_sim_ws/src/vision_people_sim/worlds/: basic_people.sdf  city_apm_rgbd.sdf  city_people.sdf  multi_people.sdf
(+56 files in other folders)
