<?xml version="1.0"?>
<package format="3">
  <name>vision_people_sim</name>
  <version>0.1.0</version>
  <description>Lightweight Gazebo Sim + ROS2 visual people motion environments without collision interaction.</description>
  <maintainer email="ld666@example.com">ld666</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
